Added sciflow clean

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
     "\n",
     "\n",
     "def format_arg(arg, param_meta, returned_params):\n",
-    "    if(arg in param_meta and not param_meta[arg].has_metaflow_param):\n",
+    "    if arg in param_meta and not param_meta[arg].has_metaflow_param:\n",
     "        result = arg\n",
     "    else:\n",
     "        result = \"self.\" + arg\n",
@@ -508,8 +508,8 @@
     "                    raise ValueError(\n",
     "                        f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "                    )\n",
-    "                #print(step.return_stmt)\n",
-    "                #returned_params.append(step.return_stmt)\n",
+    "                # print(step.return_stmt)\n",
+    "                # returned_params.append(step.return_stmt)\n",
     "                flow_file.write(\n",
     "                    f\"{single_indent}{single_indent}results = {orig_step_names[i]}({flow_step_args})\\n\"\n",
     "                )\n",
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,18 +581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert (\n",
-    "    Path(\"/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py\") == flow_path\n",
+    "    Path(os.path.join(Path(\".\").resolve(), \"test\", \"flows\", \"test_data_handling.py\",))\n",
+    "    == flow_path\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -621,9 +622,12 @@
     }
    ],
    "source": [
-    "nb_to_metaflow(Path(\"/home/jovyan/git/sciflow/nbs/test/test_clustering.ipynb\"), \n",
-    "               Path(\"/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py\"), \n",
-    "               silent=False, track_experiment=True)"
+    "nb_to_metaflow(\n",
+    "    Path(\"/home/jovyan/git/sciflow/nbs/test/test_clustering.ipynb\"),\n",
+    "    Path(\"/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py\"),\n",
+    "    silent=False,\n",
+    "    track_experiment=True,\n",
+    ")"
    ]
   },
   {
@@ -635,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,17 +712,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def check_flows(config, flow_command=\"show\"):\n",
+    "def check_flows(config, flow_command=\"show\", ignore_suffix=\"_no_params.py\"):\n",
     "    flow_results = {}\n",
     "    flows_dir = config.path(\"flows_path\")\n",
-    "    for flow_path in os.listdir(flows_dir):\n",
+    "    if ignore_suffix:\n",
+    "        flow_paths = [p for p in os.listdir(flows_dir) if not p.endswith(ignore_suffix)]\n",
+    "    else:\n",
+    "        flow_paths = os.listdir(flows_dir)\n",
+    "    for flow_path in flow_paths:\n",
     "        flow_name = os.path.basename(flow_path)\n",
     "        if flow_path.endswith(\".py\"):\n",
     "            ret_code, output = check_flow(\n",
@@ -726,14 +734,16 @@
     "            )\n",
     "            flow_results[flow_name] = ret_code, output\n",
     "            if ret_code == 0:\n",
-    "                print(f\"Flow: {flow_name} verified\")\n",
+    "                print(f\"Flow: {flow_name} {flow_command} verified\")\n",
     "            else:\n",
-    "                print(f\"Flow: {flow_name} verification failed\\nDetails:\\n{output}\")"
+    "                print(\n",
+    "                    f\"Flow: {flow_name} {flow_command} verification failed\\nDetails:\\n{output}\"\n",
+    "                )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -801,14 +811,12 @@
     }
    ],
    "source": [
-    "# slow\n",
-    "\n",
-    "check_flows(Config(cfg_name=\"test/settings.ini\"))"
+    "check_flows(Config(cfg_name=\"test/settings.ini\"), ignore_suffix=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -816,50 +824,6 @@
      "output_type": "stream",
      "text": [
       "Flow: test_module.py verified\n",
-      "Flow: test_clustering_no_params.py verification failed\n",
-      "Details:\n",
-      "Metaflow 2.2.7 executing TestClusteringNoParamsFlow for user:e02079\n",
-      "Validating your flow...\n",
-      "    The graph looks good!\n",
-      "2021-04-21 13:56:25.989 Workflow starting (run-id 1619013385984786):\n",
-      "2021-04-21 13:56:25.993 [1619013385984786/start/1 (pid 2765)] Task is starting.\n",
-      "2021-04-21 13:56:28.100 [1619013385984786/start/1 (pid 2765)] Task finished successfully.\n",
-      "2021-04-21 13:56:28.107 [1619013385984786/preprocess/2 (pid 2780)] Task is starting.\n",
-      "2021-04-21 13:56:30.006 [1619013385984786/preprocess/2 (pid 2780)] <flow TestClusteringNoParamsFlow step preprocess> failed:\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     Internal error\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)] Traceback (most recent call last):\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 930, in main\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     start(auto_envvar_prefix='METAFLOW', obj=state)\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 829, in __call__\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     return self.main(args, kwargs)\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 782, in main\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     rv = self.invoke(ctx)\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1259, in invoke\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1066, in invoke\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]     return ctx.invoke(self.callback, ctx.params)\n",
-      "2021-04-21 13:56:30.007 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 610, in invoke\n",
-      "2021-04-21 13:56:30.008 [1619013385984786/preprocess/2 (pid 2780)]     return callback(args, kwargs)\n",
-      "2021-04-21 13:56:30.008 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/decorators.py\", line 33, in new_func\n",
-      "2021-04-21 13:56:30.008 [1619013385984786/preprocess/2 (pid 2780)]     return f(get_current_context().obj, args, kwargs)\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 447, in step\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]     max_user_code_retries)\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 396, in run_step\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]     self._exec_step_function(step_func)\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/task.py\", line 47, in _exec_step_function\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]     step_function()\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/git/sciflow/nbs/test/flows/test_clustering_no_params.py\", line 38, in preprocess\n",
-      "2021-04-21 13:56:30.180 [1619013385984786/preprocess/2 (pid 2780)]     results = preprocess(self.dremio_access, self.model_level, self.min_date, self.traffic_percent)\n",
-      "2021-04-21 13:56:30.181 [1619013385984786/preprocess/2 (pid 2780)]   File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/flowspec.py\", line 129, in __getattr__\n",
-      "2021-04-21 13:56:30.181 [1619013385984786/preprocess/2 (pid 2780)]     (self.name, name))\n",
-      "2021-04-21 13:56:30.181 [1619013385984786/preprocess/2 (pid 2780)] AttributeError: Flow TestClusteringNoParamsFlow has no attribute 'dremio_access'\n",
-      "2021-04-21 13:56:30.181 [1619013385984786/preprocess/2 (pid 2780)] \n",
-      "2021-04-21 13:56:30.182 [1619013385984786/preprocess/2 (pid 2780)] Task failed.\n",
-      "2021-04-21 13:56:30.182 Workflow failed.\n",
-      "2021-04-21 13:56:30.182 Terminating 0 active tasks...\n",
-      "2021-04-21 13:56:30.182 Flushing logs...\n",
-      "    Step failure:\n",
-      "    Step preprocess (task-id 2) failed.\n",
       "Flow: test_clustering.py verified\n",
       "Flow: test_data_handling.py verified\n",
       "Flow: test_export.py verified\n"
@@ -874,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,18 +870,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
